--- a/app/src/main/res/layout/activity_ashta.xml
+++ b/app/src/main/res/layout/activity_ashta.xml
@@ -72,7 +72,7 @@
                 android:text="Bawachi Fata"
                 android:fontFamily="@font/lora"
                 android:textColor="@color/blue"
-                android:textSize="22dp"
+                android:textSize="20dp"
                 android:textStyle="bold" />
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -87,7 +87,7 @@
                     android:fontFamily="@font/lora"
                     android:text="MorningTime = 7:50AM"
                     android:textColor="@color/blue"
-                    android:textSize="14sp" />
+                    android:textSize="14dp" />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -95,7 +95,7 @@
                     android:fontFamily="@font/lora"
                     android:text="EveningTime = 5:25PM"
                     android:textColor="@color/blue"
-                    android:textSize="14sp" />
+                    android:textSize="14dp" />
             </LinearLayout>
 
 
@@ -111,7 +111,7 @@
                 android:fontFamily="@font/lora"
                 android:text="Ashta"
                 android:textColor="@color/blue"
-                android:textSize="22dp"
+                android:textSize="20dp"
                 android:textStyle="bold" />
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -126,7 +126,7 @@
                     android:fontFamily="@font/lora"
                     android:text="MorningTime = 8:00AM"
                     android:textColor="@color/blue"
-                    android:textSize="14sp" />
+                    android:textSize="14dp" />
                 <TextView
                     android:layout_width="wrap_content"
                     android:fontFamily="@font/lora"
@@ -134,7 +134,7 @@
                     android:layout_gravity="center_horizontal"
                     android:text="EveningTime = 5:20PM"
                     android:textColor="@color/blue"
-                    android:textSize="14sp" />
+                    android:textSize="14dp" />
             </LinearLayout>
 
             <ImageView
@@ -150,7 +150,7 @@
                 android:text="Bagani"
                 android:fontFamily="@font/lora"
                 android:textColor="@color/blue"
-                android:textSize="22dp"
+                android:textSize="20dp"
                 android:textStyle="bold" />
 
             <LinearLayout
@@ -166,7 +166,7 @@
                     android:fontFamily="@font/lora"
                     android:text="MorningTime = 8:05AM"
                     android:textColor="@color/blue"
-                    android:textSize="14sp" />
+                    android:textSize="14dp" />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -174,7 +174,7 @@
                     android:fontFamily="@font/lora"
                     android:text="EveningTime = 5:15PM"
                     android:textColor="@color/blue"
-                    android:textSize="14sp" />
+                    android:textSize="14dp" />
             </LinearLayout>
 
             <ImageView
@@ -206,7 +206,7 @@
                     android:text="MorningTime = 8:10AM"
                     android:fontFamily="@font/lora"
                     android:textColor="@color/blue"
-                    android:textSize="14sp" />
+                    android:textSize="14dp" />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -214,7 +214,7 @@
                     android:text="EveningTime = 5:10PM"
                     android:fontFamily="@font/lora"
                     android:textColor="@color/blue"
-                    android:textSize="14sp" />
+                    android:textSize="14dp" />
             </LinearLayout>
 
             <ImageView
@@ -246,7 +246,7 @@
                     android:fontFamily="@font/lora"
                     android:text="MorningTime = 8:15AM"
                     android:textColor="@color/blue"
-                    android:textSize="14sp" />
+                    android:textSize="14dp" />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -254,7 +254,7 @@
                     android:fontFamily="@font/lora"
                     android:text="EveningTime = 5:05PM"
                     android:textColor="@color/blue"
-                    android:textSize="14sp" />
+                    android:textSize="14dp" />
             </LinearLayout>
 
             <ImageView
@@ -286,7 +286,7 @@
                     android:text="MorningTime = 8:25AM"
                     android:fontFamily="@font/lora"
                     android:textColor="@color/blue"
-                    android:textSize="14sp" />
+                    android:textSize="14dp" />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -294,7 +294,7 @@
                     android:fontFamily="@font/lora"
                     android:text="EveningTime = 4:55PM"
                     android:textColor="@color/blue"
-                    android:textSize="14sp" />
+                    android:textSize="14dp" />
             </LinearLayout>
 
             <ImageView
@@ -326,7 +326,7 @@
                     android:text="MorningTime = 8:30AM"
                     android:fontFamily="@font/lora"
                     android:textColor="@color/blue"
-                    android:textSize="14sp" />
+                    android:textSize="14dp" />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -334,7 +334,7 @@
                     android:text="EveningTime = 4:45PM"
                     android:fontFamily="@font/lora"
                     android:textColor="@color/blue"
-                    android:textSize="14sp" />
+                    android:textSize="14dp" />
             </LinearLayout>
 
             <ImageView
@@ -366,7 +366,7 @@
                     android:text="MorningTime = 8:35AM"
                     android:fontFamily="@font/lora"
                     android:textColor="@color/blue"
-                    android:textSize="14sp" />
+                    android:textSize="14dp" />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -374,7 +374,7 @@
                     android:text="EveningTime = 4:40PM"
                     android:fontFamily="@font/lora"
                     android:textColor="@color/blue"
-                    android:textSize="14sp" />
+                    android:textSize="14dp" />
             </LinearLayout>
 
             <ImageView
@@ -405,7 +405,7 @@
                     android:fontFamily="@font/lora"
                     android:text="MorningTime = 8:40AM"
                     android:textColor="@color/blue"
-                    android:textSize="14sp" />
+                    android:textSize="14dp" />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -413,7 +413,7 @@
                     android:text="EveningTime = 4:35PM"
                     android:fontFamily="@font/lora"
                     android:textColor="@color/blue"
-                    android:textSize="14sp" />
+                    android:textSize="14dp" />
             </LinearLayout>
 
             <ImageView
@@ -440,7 +440,7 @@
                     android:text="MorningTime = 8:50AM"
                     android:fontFamily="@font/lora"
                     android:textColor="@color/blue"
-                    android:textSize="14sp" />
+                    android:textSize="14dp" />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -448,7 +448,7 @@
                     android:text="EveningTime = 4:25PM"
                     android:fontFamily="@font/lora"
                     android:textColor="@color/blue"
-                    android:textSize="14sp" />
+                    android:textSize="14dp" />
             </LinearLayout>
 
             <TextView
