--- a/app/src/main/res/layout/activity_entc.xml
+++ b/app/src/main/res/layout/activity_entc.xml
@@ -67,12 +67,13 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp"
                 android:layout_width="match_parent"
-                android:layout_height="60dp"
+                android:layout_height="wrap_content"
+                android:padding="2dp"
                 android:textColor="@color/white"
                 android:background="#F2150E65"
                 android:fontFamily="@font/lora"
-                android:text="Department of Electronics and Telecommunication Eng."
-                android:textSize="20sp"
+                android:text="Department of Electronics and Telecommunication Engg."
+                android:textSize="18dp"
                 android:gravity="center"
                 android:layout_marginBottom="7dp">
             </TextView>
@@ -83,7 +84,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#0F018786"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 android:textColor="@color/black"
                 android:padding="5dp"
                 android:fontFamily="@font/lora"
@@ -96,7 +97,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#0F018786"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 android:textColor="@color/black"
                 android:padding="5dp"
                 android:fontFamily="@font/lora"
@@ -116,12 +117,13 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp"
                 android:layout_width="match_parent"
-                android:layout_height="30dp"
+                android:layout_height="wrap_content"
+                android:padding="2dp"
                 android:textColor="@color/white"
                 android:background="#F2150E65"
                 android:fontFamily="@font/lora"
-                android:text="Electronics Engineering – Scope"
-                android:textSize="20sp"
+                android:text="Electronics and Telecommunication Engg. – Scope"
+                android:textSize="18dp"
                 android:gravity="center"
                 android:layout_marginBottom="7dp">
             </TextView>
@@ -132,7 +134,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#0F018786"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 android:textColor="@color/black"
                 android:padding="5dp"
                 android:fontFamily="@font/lora"
@@ -146,7 +148,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#0F018786"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 android:textColor="@color/black"
                 android:padding="5dp"
                 android:fontFamily="@font/lora"
@@ -160,7 +162,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#0F018786"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 android:textColor="@color/black"
                 android:padding="5dp"
                 android:fontFamily="@font/lora"
@@ -174,7 +176,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#0F018786"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 android:textColor="@color/black"
                 android:padding="5dp"
                 android:fontFamily="@font/lora"
@@ -188,7 +190,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#0F018786"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 android:textColor="@color/black"
                 android:padding="5dp"
                 android:layout_marginBottom="10dp"
@@ -201,12 +203,13 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp"
                 android:layout_width="match_parent"
-                android:layout_height="30dp"
+                android:layout_height="wrap_content"
+                android:padding="2dp"
                 android:textColor="@color/white"
                 android:background="#F2150E65"
                 android:fontFamily="@font/lora"
-                android:text="Electronics Engineering Streams"
-                android:textSize="20sp"
+                android:text="Electronics and Telecommunication Engg. Streams"
+                android:textSize="18dp"
                 android:gravity="center"
                 android:layout_marginBottom="7dp">
             </TextView>
@@ -217,7 +220,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#0F018786"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 android:textColor="@color/black"
                 android:padding="5dp"
                 android:fontFamily="@font/lora"
@@ -231,7 +234,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#0F018786"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 android:textColor="@color/black"
                 android:padding="5dp"
                 android:fontFamily="@font/lora"
@@ -245,7 +248,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#0F018786"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 android:textColor="@color/black"
                 android:padding="5dp"
                 android:fontFamily="@font/lora"
@@ -259,7 +262,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#0F018786"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 android:textColor="@color/black"
                 android:padding="5dp"
                 android:fontFamily="@font/lora"
@@ -273,7 +276,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#0F018786"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 android:textColor="@color/black"
                 android:padding="5dp"
                 android:fontFamily="@font/lora"
@@ -287,7 +290,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#0F018786"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 android:textColor="@color/black"
                 android:padding="5dp"
                 android:fontFamily="@font/lora"
@@ -301,7 +304,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#0F018786"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 android:textColor="@color/black"
                 android:padding="5dp"
                 android:layout_marginBottom="10dp"
@@ -309,9 +312,6 @@
                 android:text="> Bio-Medical Engineering"
                 >
             </TextView>
-
         </LinearLayout>
-
     </androidx.core.widget.NestedScrollView>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
