--- a/app/src/main/res/layout/activity_ews.xml
+++ b/app/src/main/res/layout/activity_ews.xml
@@ -20,7 +20,8 @@
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:layout_margin="5dp"
-            app:srcCompat="@drawable/back"></ImageView>
+            app:srcCompat="@drawable/back">
+        </ImageView>
 
         <TextView
             android:layout_width="160dp"
@@ -65,12 +66,13 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp"
                 android:layout_width="match_parent"
-                android:layout_height="30dp"
+                android:layout_height="wrap_content"
+                android:padding="2dp"
                 android:textColor="@color/white"
                 android:background="#F2150E65"
                 android:text="What is EWS Scheme"
                 android:fontFamily="@font/lora"
-                android:textSize="20sp"
+                android:textSize="18dp"
                 android:gravity="center">
             </TextView>
             <TextView
@@ -84,7 +86,7 @@
                 android:fontFamily="@font/lora"
                 android:text="The economically weaker section (EWS) is the section of the society in India that belongs to the un-reserved category and has an annual family income of less than 8 lakh rupees. This category includes people that do not belong to the caste categories of ST/SC/OBC who already enjoy the benefits of reservation."
                 android:textColor="@color/black"
-                android:textSize="16sp">
+                android:textSize="14dp">
             </TextView>
 
             <TextView
@@ -92,12 +94,13 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp"
                 android:layout_width="match_parent"
-                android:layout_height="30dp"
+                android:layout_height="wrap_content"
+                android:padding="2dp"
                 android:textColor="@color/white"
                 android:background="#F2150E65"
                 android:text="Eligibility"
                 android:fontFamily="@font/lora"
-                android:textSize="20sp"
+                android:textSize="18dp"
                 android:gravity="center">
             </TextView>
             <TextView
@@ -111,7 +114,7 @@
                 android:fontFamily="@font/lora"
                 android:text="40% marks in Physics, Mathematics and Chemistry / Biology / Vocational subjects in HSC and appeared in MHT-CET 2023 or JEE Mains (Paper 1) 2023"
                 android:textColor="@color/black"
-                android:textSize="16sp">
+                android:textSize="14dp">
             </TextView>
 
             <TextView
@@ -119,12 +122,13 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp"
                 android:layout_width="match_parent"
-                android:layout_height="30dp"
+                android:layout_height="wrap_content"
+                android:padding="2dp"
                 android:textColor="@color/white"
                 android:background="#F2150E65"
                 android:fontFamily="@font/lora"
                 android:text="Documents"
-                android:textSize="20sp"
+                android:textSize="18dp"
                 android:gravity="center">
             </TextView>
             <TextView
@@ -139,7 +143,7 @@
                 android:fontFamily="@font/lora"
                 android:text="SSC mark sheet"
                 android:textColor="@color/black"
-                android:textSize="18sp">
+                android:textSize="16dp">
             </TextView>
             <TextView
                 android:layout_marginTop="2dp"
@@ -153,7 +157,7 @@
                 android:fontFamily="@font/lora"
                 android:text="HSC mark sheet"
                 android:textColor="@color/black"
-                android:textSize="18sp">
+                android:textSize="16dp">
             </TextView>
             <TextView
                 android:layout_marginTop="2dp"
@@ -167,7 +171,7 @@
                 android:fontFamily="@font/lora"
                 android:text="MHT-CET / JEE mark sheet"
                 android:textColor="@color/black"
-                android:textSize="18sp">
+                android:textSize="16dp">
             </TextView>
             <TextView
                 android:layout_marginTop="2dp"
@@ -181,7 +185,7 @@
                 android:fontFamily="@font/lora"
                 android:text="Leaving certificate"
                 android:textColor="@color/black"
-                android:textSize="18sp">
+                android:textSize="16dp">
             </TextView>
             <TextView
                 android:layout_marginTop="2dp"
@@ -195,7 +199,7 @@
                 android:fontFamily="@font/lora"
                 android:text="Nationality certificate"
                 android:textColor="@color/black"
-                android:textSize="18sp">
+                android:textSize="16dp">
             </TextView>
             <TextView
                 android:layout_marginTop="2dp"
@@ -209,7 +213,7 @@
                 android:fontFamily="@font/lora"
                 android:text="Domicile certificate"
                 android:textColor="@color/black"
-                android:textSize="18sp">
+                android:textSize="16dp">
             </TextView>
             <TextView
                 android:layout_marginTop="2dp"
@@ -223,19 +227,20 @@
                 android:fontFamily="@font/lora"
                 android:text="EWS Certificate"
                 android:textColor="@color/black"
-                android:textSize="18sp">
+                android:textSize="16dp">
             </TextView>
             <TextView
                 android:layout_marginTop="20dp"
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp"
                 android:layout_width="match_parent"
-                android:layout_height="30dp"
+                android:layout_height="wrap_content"
+                android:padding="2dp"
                 android:textColor="@color/white"
                 android:background="#F2150E65"
                 android:fontFamily="@font/lora"
                 android:text="Income Certificate"
-                android:textSize="20sp"
+                android:textSize="18dp"
                 android:gravity="center">
             </TextView>
             <TextView
@@ -250,7 +255,7 @@
                 android:text="Not Required"
                 android:fontFamily="@font/lora"
                 android:textColor="@color/black"
-                android:textSize="18sp">
+                android:textSize="16dp">
             </TextView>
 
         </LinearLayout>
