--- a/app/src/main/res/layout/activity_mock4.xml
+++ b/app/src/main/res/layout/activity_mock4.xml
@@ -65,12 +65,13 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp"
                 android:layout_width="match_parent"
-                android:layout_height="30dp"
+                android:layout_height="wrap_content"
+                android:padding="2dp"
                 android:textColor="@color/white"
                 android:background="#F2150E65"
                 android:text="Select Subject"
                 android:fontFamily="@font/lora"
-                android:textSize="20sp"
+                android:textSize="18dp"
                 android:gravity="center">
             </TextView>
 
@@ -78,9 +79,8 @@
                 android:layout_marginTop="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:cardCornerRadius="5dp"
+                app:cardCornerRadius="10dp"
                 android:id="@+id/physics"
-                app:cardElevation="5dp"
                 app:cardBackgroundColor="@color/backcolor"
                 android:layout_marginStart="5dp"
                 app:cardUseCompatPadding="true">
@@ -98,7 +98,7 @@
                     android:fontFamily="@font/lora"
                     android:gravity="center"
                     android:layout_margin="5dp"
-                    android:textSize="16sp"
+                    android:textSize="16dp"
                     android:textColor="@color/black"
                     android:textStyle="bold">
                 </TextView>
@@ -107,8 +107,7 @@
                 android:layout_marginTop="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:cardCornerRadius="5dp"
-                app:cardElevation="5dp"
+                app:cardCornerRadius="10dp"
                 android:id="@+id/chemistry"
                 app:cardBackgroundColor="@color/backcolor"
                 android:layout_marginStart="5dp"
@@ -127,7 +126,7 @@
                     android:fontFamily="@font/lora"
                     android:gravity="center"
                     android:layout_margin="5dp"
-                    android:textSize="16sp"
+                    android:textSize="16dp"
                     android:textColor="@color/black"
                     android:textStyle="bold">
                 </TextView>
@@ -136,9 +135,8 @@
                 android:layout_marginTop="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:cardCornerRadius="5dp"
+                app:cardCornerRadius="10dp"
                 android:id="@+id/maths"
-                app:cardElevation="5dp"
                 app:cardBackgroundColor="@color/backcolor"
                 android:layout_marginStart="5dp"
                 app:cardUseCompatPadding="true">
@@ -156,7 +154,35 @@
                     android:fontFamily="@font/lora"
                     android:gravity="center"
                     android:layout_margin="5dp"
-                    android:textSize="16sp"
+                    android:textSize="16dp"
+                    android:textColor="@color/black"
+                    android:textStyle="bold">
+                </TextView>
+            </androidx.cardview.widget.CardView>
+            <androidx.cardview.widget.CardView
+                android:layout_marginTop="20dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:cardCornerRadius="10dp"
+                android:id="@+id/pcm"
+                app:cardBackgroundColor="@color/backcolor"
+                android:layout_marginStart="5dp"
+                app:cardUseCompatPadding="true">
+                <ImageView
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="10dp"
+                    app:srcCompat="@drawable/mocktest">
+                </ImageView>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:text="PCM"
+                    android:gravity="center"
+                    android:layout_margin="5dp"
+                    android:textSize="16dp"
+                    android:fontFamily="@font/lora"
                     android:textColor="@color/black"
                     android:textStyle="bold">
                 </TextView>
