--- a/app/src/main/res/layout/activity_robotic.xml
+++ b/app/src/main/res/layout/activity_robotic.xml
@@ -84,7 +84,7 @@
                     android:fontFamily="@font/lora"
                     android:gravity="center"
                     android:layout_margin="5dp"
-                    android:textSize="16sp"
+                    android:textSize="16dp"
                     android:textColor="@color/black"
                     android:textStyle="bold">
                 </TextView>
@@ -95,6 +95,7 @@
                 android:background="@color/backcolor"
                 android:textColor="@color/nevi_1"
                 android:fontFamily="@font/lora"
+                android:textSize="14dp"
                 android:text="The Robotics Club is a community of students to provide interested students with opportunities to express their skills, knowledge and creativity through conceptualizing, designing and programming robots. The club provides a strong platform to nurture their technical understanding and culture their innovative ideas and dreams into reality. The club facilitates indispensable guidance through workshops and seminars."
                 >
             </TextView>
@@ -120,7 +121,7 @@
                     android:fontFamily="@font/lora"
                     android:gravity="center"
                     android:layout_margin="5dp"
-                    android:textSize="16sp"
+                    android:textSize="16dp"
                     android:textColor="@color/black"
                     android:textStyle="bold">
                 </TextView>
@@ -131,6 +132,7 @@
                 android:background="@color/backcolor"
                 android:textColor="@color/nevi_1"
                 android:fontFamily="@font/lora"
+                android:textSize="14dp"
                 android:text="> To inspire young minds to be the driving force in the field of robotics."
                 >
             </TextView>
@@ -141,6 +143,7 @@
                 android:background="@color/backcolor"
                 android:textColor="@color/nevi_1"
                 android:fontFamily="@font/lora"
+                android:textSize="14dp"
                 android:text="> It is an opportunity to apply knowledge creatively, to see how systems interact, both with each other and with the environment."
                 >
             </TextView>
@@ -151,6 +154,7 @@
                 android:background="@color/backcolor"
                 android:textColor="@color/nevi_1"
                 android:fontFamily="@font/lora"
+                android:textSize="14dp"
                 android:text="> To develop professional engineering skills among the students which will help them in the professional life."
                 >
             </TextView>
@@ -176,7 +180,7 @@
                     android:text="Activity"
                     android:gravity="center"
                     android:layout_margin="5dp"
-                    android:textSize="16sp"
+                    android:textSize="16dp"
                     android:textColor="@color/black"
                     android:textStyle="bold">
                 </TextView>
@@ -215,7 +219,7 @@
                         android:fontFamily="@font/lora"
                         android:text="The Session on the Introduction to Robotics."
                         android:textColor="@color/nevi_1"
-                        android:textSize="16sp"
+                        android:textSize="14dp"
                         android:textStyle="bold"
                         android:padding="5dp"
                         android:background="#31018786">
@@ -257,7 +261,7 @@
                         android:fontFamily="@font/lora"
                         android:text="The Practical Session on the Introduction to Robotics."
                         android:textColor="@color/nevi_1"
-                        android:textSize="16sp"
+                        android:textSize="14dp"
                         android:textStyle="bold"
                         android:padding="5dp"
                         android:background="#31018786">
