--- a/app/src/main/res/layout/activity_admission.xml
+++ b/app/src/main/res/layout/activity_admission.xml
@@ -63,12 +63,13 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp"
                 android:layout_width="match_parent"
-                android:layout_height="30dp"
+                android:layout_height="wrap_content"
+                android:padding="2dp"
                 android:textColor="@color/white"
                 android:background="#F2150E65"
                 android:text="We Provide"
                 android:fontFamily="@font/lora"
-                android:textSize="20sp"
+                android:textSize="18dp"
                 android:gravity="center">
             </TextView>
             <TextView
@@ -81,7 +82,7 @@
                 android:fontFamily="@font/lora"
                 android:text="1) Counselling to Parents and Students about admission process."
                 android:textColor="@color/black"
-                android:textSize="16sp">
+                android:textSize="14dp">
             </TextView>
             <TextView
                 android:layout_marginTop="5dp"
@@ -93,7 +94,7 @@
                 android:fontFamily="@font/lora"
                 android:text="2) Visit to various Departments / Virtual Tour of College on our Website."
                 android:textColor="@color/black"
-                android:textSize="16sp">
+                android:textSize="14dp">
             </TextView>
             <TextView
                 android:layout_marginTop="5dp"
@@ -105,7 +106,7 @@
                 android:fontFamily="@font/lora"
                 android:text="3) Guidance for filling admission form and CAP option forms by the experts."
                 android:textColor="@color/black"
-                android:textSize="16sp">
+                android:textSize="14dp">
             </TextView>
 
             <View
@@ -121,12 +122,13 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp"
                 android:layout_width="match_parent"
-                android:layout_height="30dp"
+                android:layout_height="wrap_content"
+                android:padding="2dp"
                 android:textColor="@color/white"
                 android:background="#F2150E65"
                 android:text="DTE Code"
                 android:fontFamily="@font/lora"
-                android:textSize="20sp"
+                android:textSize="20dp"
                 android:gravity="center">
             </TextView>
 
@@ -138,7 +140,7 @@
                 android:layout_height="wrap_content"
                 android:background="#0F018786"
                 android:textColor="@color/black"
-                android:textSize="16sp"
+                android:textSize="14dp"
                 android:fontFamily="@font/lora"
                 android:text="Engineering DTE Code:">
             </TextView>
@@ -150,7 +152,7 @@
                 android:layout_height="wrap_content"
                 android:background="#0F018786"
                 android:textColor="@color/black"
-                android:textSize="18sp"
+                android:textSize="16dp"
                 android:textStyle="bold"
                 android:gravity="center"
                 android:fontFamily="@font/lora"
@@ -165,7 +167,7 @@
                 android:layout_height="wrap_content"
                 android:background="#0F018786"
                 android:textColor="@color/black"
-                android:textSize="16sp"
+                android:textSize="14dp"
                 android:fontFamily="@font/lora"
                 android:text="Architecture DTE Code:">
             </TextView>
@@ -177,7 +179,7 @@
                 android:layout_height="wrap_content"
                 android:background="#0F018786"
                 android:textColor="@color/black"
-                android:textSize="18sp"
+                android:textSize="16dp"
                 android:textStyle="bold"
                 android:gravity="center"
                 android:fontFamily="@font/lora"
@@ -196,12 +198,13 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp"
                 android:layout_width="match_parent"
-                android:layout_height="30dp"
+                android:layout_height="wrap_content"
+                android:padding="2dp"
                 android:textColor="@color/white"
                 android:background="@color/nevi_1"
                 android:fontFamily="@font/lora"
                 android:text="Admission Contact"
-                android:textSize="20sp"
+                android:textSize="20dp"
                 android:gravity="center"
                 android:layout_marginBottom="7dp">
             </TextView>
@@ -213,7 +216,7 @@
             <TableRow
                 android:layout_height="47dp"
                 android:background="@color/branch"
-                android:padding="10dp">
+                android:padding="5dp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -223,7 +226,7 @@
                     android:text="Admission Office"
                     android:gravity="center_horizontal"
                     android:textColor="@color/white"
-                    android:textSize="18sp"
+                    android:textSize="18dp"
                     android:textStyle="bold">
                 </TextView>
             </TableRow>
@@ -238,7 +241,7 @@
                     android:text="0231-2601431"
                     android:textColor="@color/black"
                     android:textStyle="bold"
-                    android:textSize="18sp"
+                    android:textSize="18dp"
                     android:layout_weight="1">
                 </TextView>
             </TableRow>
@@ -251,7 +254,7 @@
                 <TableRow
                     android:layout_height="47dp"
                     android:background="@color/branch"
-                    android:padding="10dp">
+                    android:padding="5dp">
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -261,7 +264,7 @@
                         android:text="Admission Incharge"
                         android:gravity="center_horizontal"
                         android:textColor="@color/white"
-                        android:textSize="18sp"
+                        android:textSize="18dp"
                         android:textStyle="bold">
                     </TextView>
                 </TableRow>
@@ -276,7 +279,7 @@
                         android:text="9158915999  |  9158615999"
                         android:textColor="@color/black"
                         android:textStyle="bold"
-                        android:textSize="18sp"
+                        android:textSize="18dp"
                         android:layout_weight="1">
                     </TextView>
                 </TableRow>
