--- a/app/src/main/res/layout/activity_ai_ml.xml
+++ b/app/src/main/res/layout/activity_ai_ml.xml
@@ -32,7 +32,7 @@
             android:fontFamily="@font/lora"
             android:text="AI-ML"
             android:textColor="@color/white"
-            android:textSize="20sp">
+            android:textSize="20dp">
         </TextView>
 
         <ImageView
@@ -66,12 +66,13 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp"
                 android:layout_width="match_parent"
-                android:layout_height="60dp"
+                android:layout_height="wrap_content"
+                android:padding="2dp"
                 android:textColor="@color/white"
                 android:background="#F2150E65"
                 android:fontFamily="@font/lora"
-                android:text="Department of CSE(Artificial Intelliegnce and Machine Learning) Eng."
-                android:textSize="20sp"
+                android:text="Department of CSE(Artificial Intelliegnce and Machine Learning) Engg."
+                android:textSize="18dp"
                 android:gravity="center"
                 android:layout_marginBottom="7dp">
             </TextView>
@@ -82,7 +83,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#0F018786"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 android:textColor="@color/black"
                 android:padding="5dp"
                 android:fontFamily="@font/lora"
@@ -95,7 +96,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#0F018786"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 android:textColor="@color/black"
                 android:padding="5dp"
                 android:fontFamily="@font/lora"
@@ -119,8 +120,8 @@
                 android:textColor="@color/white"
                 android:background="#F2150E65"
                 android:fontFamily="@font/lora"
-                android:text="Future of AI"
-                android:textSize="20sp"
+                android:text="Future of AI-ML"
+                android:textSize="18dp"
                 android:gravity="center"
                 android:layout_marginBottom="7dp">
             </TextView>
@@ -140,7 +141,7 @@
                         android:layout_height="wrap_content"
                         android:text="Sector"
                         android:textColor="@color/white"
-                        android:textSize="18sp"
+                        android:textSize="16dp"
                         android:textStyle="bold">
                     </TextView>
 
@@ -152,7 +153,7 @@
                         android:layout_weight="1"
                         android:gravity="center_horizontal"
                         android:textColor="@color/white"
-                        android:textSize="18sp"
+                        android:textSize="16dp"
                         android:textStyle="bold">
                     </TextView>
                 </TableRow>
@@ -166,7 +167,7 @@
                         android:fontFamily="@font/lora"
                         android:text="Transportation"
                         android:textColor="@color/black"
-                        android:textSize="16sp">
+                        android:textSize="14dp">
                     </TextView>
                     <TextView
                         android:layout_width="wrap_content"
@@ -175,7 +176,7 @@
                         android:padding="1dp"
                         android:text="Self Driving Cars, Pilotless aircraft, Drones"
                         android:textColor="@color/black"
-                        android:textSize="16sp"
+                        android:textSize="14dp"
                         android:layout_weight="1">
                     </TextView>
                 </TableRow>
@@ -190,7 +191,8 @@
                         android:text="Manufacturing"
                         android:textColor="@color/black"
                         android:layout_marginRight="5dp"
-                        android:textSize="16sp"></TextView>
+                        android:textSize="14dp">
+                    </TextView>
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -198,7 +200,7 @@
                         android:fontFamily="@font/lora"
                         android:text="AI Powered Robots"
                         android:textColor="@color/black"
-                        android:textSize="16sp"
+                        android:textSize="14dp"
                         android:layout_weight="1">
                     </TextView>
                 </TableRow>
@@ -211,8 +213,7 @@
                         android:layout_height="wrap_content"
                         android:text="Health Care"
                         android:textColor="@color/black"
-                        android:textSize="16sp"
-                        >
+                        android:textSize="14dp">
                     </TextView>
                     <TextView
                         android:layout_width="wrap_content"
@@ -221,7 +222,7 @@
                         android:text="Diagnostics, drug Discovery, Virtual Nursing Assistant"
                         android:padding="1dp"
                         android:textColor="@color/black"
-                        android:textSize="16sp"
+                        android:textSize="14dp"
                         android:layout_weight="1">
                     </TextView>
                 </TableRow>
@@ -235,8 +236,8 @@
                         android:fontFamily="@font/lora"
                         android:text="Education"
                         android:textColor="@color/black"
-                        android:textSize="16sp"
-                        ></TextView>
+                        android:textSize="14dp">
+                    </TextView>
                     <TextView
                         android:layout_gravity="center_vertical"
                         android:layout_width="wrap_content"
@@ -245,7 +246,7 @@
                         android:text="Digital Library, Virtual Tutors, Assessment and Monitoring of students based on facial expressions"
                         android:textColor="@color/black"
                         android:padding="1dp"
-                        android:textSize="16sp"
+                        android:textSize="14dp"
                         android:layout_weight="1">
                     </TextView>
                 </TableRow>
@@ -258,7 +259,7 @@
                         android:fontFamily="@font/lora"
                         android:text="Social Media"
                         android:textColor="@color/black"
-                        android:textSize="16sp"
+                        android:textSize="14dp"
                         >
                     </TextView>
                     <TextView
@@ -269,7 +270,7 @@
                         android:text="Digital Marketing, Sentimental Analysis"
                         android:textColor="@color/black"
                         android:padding="1dp"
-                        android:textSize="16sp"
+                        android:textSize="14dp"
                         android:layout_weight="1">
                     </TextView>
                 </TableRow>
@@ -283,8 +284,9 @@
                         android:text="Customer Services"
                         android:fontFamily="@font/lora"
                         android:textColor="@color/black"
-                        android:textSize="16sp"
-                        ></TextView>
+                        android:textSize="14dp"
+                        >
+                    </TextView>
                     <TextView
                         android:layout_gravity="center_vertical"
                         android:layout_width="wrap_content"
@@ -292,7 +294,7 @@
                         android:layout_height="wrap_content"
                         android:text="Amacon, Flipkart, Snapdeal"
                         android:textColor="@color/black"
-                        android:textSize="16sp"
+                        android:textSize="14dp"
                         android:layout_weight="1">
                     </TextView>
                 </TableRow>
@@ -306,8 +308,9 @@
                         android:fontFamily="@font/lora"
                         android:text="Entertainment"
                         android:textColor="@color/black"
-                        android:textSize="16sp"
-                        ></TextView>
+                        android:textSize="14dp"
+                        >
+                    </TextView>
                     <TextView
                         android:layout_gravity="center_vertical"
                         android:layout_width="wrap_content"
@@ -315,16 +318,11 @@
                         android:fontFamily="@font/lora"
                         android:text="AR and VR, Gaming, OTT Platform"
                         android:textColor="@color/black"
-                        android:textSize="16sp"
+                        android:textSize="14dp"
                         android:layout_weight="1">
                     </TextView>
                 </TableRow>
-
             </TableLayout>
-
-
         </LinearLayout>
-
     </androidx.core.widget.NestedScrollView>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
