--- a/app/src/main/res/layout/activity_architecture.xml
+++ b/app/src/main/res/layout/activity_architecture.xml
@@ -67,12 +67,13 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp"
                 android:layout_width="match_parent"
-                android:layout_height="30dp"
+                android:layout_height="wrap_content"
+                android:padding="2dp"
                 android:textColor="@color/white"
                 android:background="#F2150E65"
                 android:fontFamily="@font/lora"
                 android:text="The School of Architecture"
-                android:textSize="20sp"
+                android:textSize="18dp"
                 android:gravity="center"
                 android:layout_marginBottom="7dp">
             </TextView>
@@ -83,7 +84,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#0F018786"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 android:fontFamily="@font/lora"
                 android:textColor="@color/black"
                 android:padding="5dp"
@@ -96,7 +97,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#0F018786"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 android:textColor="@color/black"
                 android:padding="5dp"
                 android:fontFamily="@font/lora"
@@ -109,7 +110,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#0F018786"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 android:textColor="@color/black"
                 android:padding="5dp"
                 android:fontFamily="@font/lora"
@@ -122,7 +123,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#0F018786"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 android:textColor="@color/black"
                 android:padding="5dp"
                 android:fontFamily="@font/lora"
@@ -135,7 +136,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#0F018786"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 android:textColor="@color/black"
                 android:padding="5dp"
                 android:fontFamily="@font/lora"
@@ -155,12 +156,13 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp"
                 android:layout_width="match_parent"
-                android:layout_height="30dp"
+                android:layout_height="wrap_content"
+                android:padding="2dp"
                 android:textColor="@color/white"
                 android:background="#F2150E65"
                 android:fontFamily="@font/lora"
                 android:text="The Benefits of Architecture"
-                android:textSize="20sp"
+                android:textSize="18dp"
                 android:gravity="center"
                 android:layout_marginBottom="7dp">
             </TextView>
@@ -171,7 +173,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#0F018786"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 android:textColor="@color/black"
                 android:fontFamily="@font/lora"
                 android:padding="5dp"
@@ -184,7 +186,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#0F018786"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 android:textColor="@color/black"
                 android:fontFamily="@font/lora"
                 android:padding="5dp"
@@ -197,17 +199,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#0F018786"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 android:textColor="@color/black"
                 android:padding="5dp"
                 android:fontFamily="@font/lora"
                 android:layout_marginBottom="10dp"
                 android:text="> Becoming an architect is a challenging process, but worth the effort. Architects receive a great deal of respect for their work and serve a fundamental role in modern society.">
             </TextView>
-
         </LinearLayout>
-
-
     </androidx.core.widget.NestedScrollView>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
