--- a/app/src/main/res/layout/activity_branch.xml
+++ b/app/src/main/res/layout/activity_branch.xml
@@ -68,12 +68,13 @@
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
             android:layout_width="match_parent"
-            android:layout_height="30dp"
+            android:layout_height="wrap_content"
             android:textColor="@color/white"
             android:background="@color/nevi_1"
             android:fontFamily="@font/lora"
+            android:padding="2dp"
             android:text="UG. COURSES ENGINEERING"
-            android:textSize="20sp"
+            android:textSize="18dp"
             android:gravity="center"
             android:layout_marginBottom="7dp">
         </TextView>
@@ -94,7 +95,7 @@
                     android:text="BRANCH"
                     android:fontFamily="@font/lora"
                     android:textColor="@color/white"
-                    android:textSize="16sp"
+                    android:textSize="16dp"
                     android:textStyle="bold">
                 </TextView>
 
@@ -106,7 +107,7 @@
                     android:fontFamily="@font/lora"
                     android:gravity="center_horizontal"
                     android:textColor="@color/white"
-                    android:textSize="16sp"
+                    android:textSize="16dp"
                     android:textStyle="bold">
                 </TextView>
             </TableRow>
@@ -120,7 +121,7 @@
                 android:text="Civil Engineering"
                 android:fontFamily="@font/lora"
                 android:textColor="@color/black"
-                android:textSize="16sp"
+                android:textSize="14dp"
                 android:layout_weight="1">
             </TextView>
             <TextView
@@ -130,7 +131,7 @@
                 android:fontFamily="@font/lora"
                 android:gravity="center_horizontal"
                 android:textColor="@color/black"
-                android:textSize="16sp"
+                android:textSize="14dp"
                 android:layout_weight="2">
             </TextView>
             </TableRow>
@@ -143,7 +144,7 @@
                     android:text="Computer Science and Engineering"
                     android:fontFamily="@font/lora"
                     android:textColor="@color/black"
-                    android:textSize="16sp"
+                    android:textSize="14dp"
                     android:layout_weight="1">
                 </TextView>
                 <TextView
@@ -153,7 +154,7 @@
                     android:fontFamily="@font/lora"
                     android:gravity="center_horizontal"
                     android:textColor="@color/black"
-                    android:textSize="16sp"
+                    android:textSize="14dp"
                     android:layout_weight="2">
                 </TextView>
             </TableRow>
@@ -166,7 +167,7 @@
                     android:fontFamily="@font/lora"
                     android:text="CSE(Data Science) Engineering"
                     android:textColor="@color/black"
-                    android:textSize="16sp"
+                    android:textSize="14dp"
                     android:layout_weight="1">
                 </TextView>
                 <TextView
@@ -176,7 +177,7 @@
                     android:fontFamily="@font/lora"
                     android:gravity="center_horizontal"
                     android:textColor="@color/black"
-                    android:textSize="16sp"
+                    android:textSize="14dp"
                     android:layout_weight="2">
                 </TextView>
             </TableRow>
@@ -191,8 +192,9 @@
                     android:text="CSE(Artificial Intelligence - Machine Learning) Engineering"
                     android:textColor="@color/black"
                     android:fontFamily="@font/lora"
-                    android:textSize="16sp"
-                    ></TextView>
+                    android:textSize="14dp"
+                    >
+                </TextView>
                 <TextView
                     android:layout_gravity="center_vertical"
                     android:layout_width="wrap_content"
@@ -201,7 +203,7 @@
                     android:fontFamily="@font/lora"
                     android:gravity="center_horizontal"
                     android:textColor="@color/black"
-                    android:textSize="16sp"
+                    android:textSize="14dp"
                     android:layout_weight="2">
                 </TextView>
             </TableRow>
@@ -214,7 +216,7 @@
                     android:fontFamily="@font/lora"
                     android:text="Chemical Engineering"
                     android:textColor="@color/black"
-                    android:textSize="16sp"
+                    android:textSize="14dp"
                     android:layout_weight="1">
                 </TextView>
                 <TextView
@@ -225,7 +227,7 @@
                     android:fontFamily="@font/lora"
                     android:gravity="center_horizontal"
                     android:textColor="@color/black"
-                    android:textSize="16sp"
+                    android:textSize="14dp"
                     android:layout_weight="2">
                 </TextView>
             </TableRow>
@@ -236,9 +238,9 @@
                     android:layout_width="230dp"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/lora"
-                    android:text="Electronics and Tele-Communication Engineering"
+                    android:text="Electronics and TeleCommunication Engineering"
                     android:textColor="@color/black"
-                    android:textSize="16sp"
+                    android:textSize="14dp"
                     android:layout_weight="1">
                 </TextView>
                 <TextView
@@ -249,7 +251,7 @@
                     android:fontFamily="@font/lora"
                     android:gravity="center_horizontal"
                     android:textColor="@color/black"
-                    android:textSize="16sp"
+                    android:textSize="14dp"
                     android:layout_weight="2">
                 </TextView>
             </TableRow>
@@ -262,7 +264,7 @@
                     android:fontFamily="@font/lora"
                     android:text="Mechanical Engineering"
                     android:textColor="@color/black"
-                    android:textSize="16sp"
+                    android:textSize="14dp"
                     android:layout_weight="1">
                 </TextView>
                 <TextView
@@ -273,7 +275,7 @@
                     android:gravity="center_horizontal"
                     android:textColor="@color/black"
                     android:fontFamily="@font/lora"
-                    android:textSize="16sp"
+                    android:textSize="14dp"
                     android:layout_weight="2">
                 </TextView>
             </TableRow>
@@ -284,12 +286,13 @@
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
             android:layout_width="match_parent"
-            android:layout_height="30dp"
+            android:layout_height="wrap_content"
+            android:padding="2dp"
             android:textColor="@color/white"
             android:background="@color/nevi_1"
             android:fontFamily="@font/lora"
             android:text="UG. COURSES ARCHITECTURE"
-            android:textSize="20sp"
+            android:textSize="18dp"
             android:gravity="center"
             android:layout_marginBottom="7dp">
         </TextView>
@@ -310,7 +313,7 @@
                 android:text="BRANCH"
                 android:fontFamily="@font/lora"
                 android:textColor="@color/white"
-                android:textSize="16sp"
+                android:textSize="16dp"
                 android:textStyle="bold">
             </TextView>
 
@@ -322,7 +325,7 @@
                 android:fontFamily="@font/lora"
                 android:gravity="center_horizontal"
                 android:textColor="@color/white"
-                android:textSize="16sp"
+                android:textSize="16dp"
                 android:textStyle="bold">
             </TextView>
         </TableRow>
@@ -335,7 +338,7 @@
                     android:text="Architecture"
                     android:fontFamily="@font/lora"
                     android:textColor="@color/black"
-                    android:textSize="16sp"
+                    android:textSize="14dp"
                     android:layout_weight="1">
                 </TextView>
                 <TextView
@@ -346,7 +349,7 @@
                     android:fontFamily="@font/lora"
                     android:gravity="center_horizontal"
                     android:textColor="@color/black"
-                    android:textSize="16sp"
+                    android:textSize="14dp"
                     android:layout_weight="2">
                 </TextView>
             </TableRow>
@@ -357,12 +360,13 @@
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
             android:layout_width="match_parent"
-            android:layout_height="30dp"
+            android:layout_height="wrap_content"
+            android:padding="2dp"
             android:textColor="@color/white"
             android:background="@color/nevi_1"
             android:text="PG. COURSES"
             android:fontFamily="@font/lora"
-            android:textSize="20sp"
+            android:textSize="18dp"
             android:gravity="center"
             android:layout_marginBottom="7dp">
         </TextView>
@@ -383,7 +387,7 @@
                 android:text="BRANCH"
                 android:fontFamily="@font/lora"
                 android:textColor="@color/white"
-                android:textSize="16sp"
+                android:textSize="16dp"
                 android:textStyle="bold">
             </TextView>
 
@@ -395,7 +399,7 @@
                 android:fontFamily="@font/lora"
                 android:gravity="center_horizontal"
                 android:textColor="@color/white"
-                android:textSize="16sp"
+                android:textSize="16dp"
                 android:textStyle="bold">
             </TextView>
         </TableRow>
@@ -408,7 +412,7 @@
                     android:fontFamily="@font/lora"
                     android:text="Computer Science and Engineering"
                     android:textColor="@color/black"
-                    android:textSize="16sp"
+                    android:textSize="14dp"
                     android:layout_weight="1">
                 </TextView>
                 <TextView
@@ -419,7 +423,7 @@
                     android:textColor="@color/black"
                     android:fontFamily="@font/lora"
                     android:gravity="center_horizontal"
-                    android:textSize="16sp"
+                    android:textSize="14dp"
                     android:layout_weight="2">
                 </TextView>
             </TableRow>
@@ -432,7 +436,7 @@
                     android:fontFamily="@font/lora"
                     android:text="Electronics and Tele Communication Engineering"
                     android:textColor="@color/black"
-                    android:textSize="16sp"
+                    android:textSize="14dp"
                     android:layout_weight="1">
                 </TextView>
                 <TextView
@@ -443,7 +447,7 @@
                     android:fontFamily="@font/lora"
                     android:textColor="@color/black"
                     android:gravity="center_horizontal"
-                    android:textSize="16sp"
+                    android:textSize="14dp"
                     android:layout_weight="2">
                 </TextView>
             </TableRow>
@@ -454,12 +458,13 @@
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
             android:layout_width="match_parent"
-            android:layout_height="30dp"
+            android:layout_height="wrap_content"
+            android:padding="2dp"
             android:textColor="@color/white"
             android:fontFamily="@font/lora"
             android:background="@color/nevi_1"
             android:text="Ph. D. COURSES"
-            android:textSize="20sp"
+            android:textSize="18dp"
             android:gravity="center"
             android:layout_marginBottom="7dp">
         </TextView>
@@ -481,7 +486,7 @@
                     android:text="BRANCH"
                     android:fontFamily="@font/lora"
                     android:textColor="@color/white"
-                    android:textSize="16sp"
+                    android:textSize="16dp"
                     android:textStyle="bold">
                 </TextView>
 
@@ -495,7 +500,7 @@
                     android:fontFamily="@font/lora"
                     android:text="Computer Science and Engineering"
                     android:textColor="@color/black"
-                    android:textSize="16sp"
+                    android:textSize="14dp"
                     android:layout_weight="1">
                 </TextView>
             </TableRow>
@@ -508,14 +513,11 @@
                     android:fontFamily="@font/lora"
                     android:text="Electronics and Tele Communication Engineering"
                     android:textColor="@color/black"
-                    android:textSize="16sp"
+                    android:textSize="14dp"
                     android:layout_weight="1">
                 </TextView>
             </TableRow>
         </TableLayout>
     </LinearLayout>
     </androidx.core.widget.NestedScrollView>
-
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
