--- a/app/src/main/res/layout/activity_career.xml
+++ b/app/src/main/res/layout/activity_career.xml
@@ -94,7 +94,7 @@
                         android:fontFamily="@font/lora"
                         android:text="School Of Architechture"
                         android:textColor="@color/nevi_1"
-                        android:textSize="16sp"
+                        android:textSize="14dp"
                         android:textStyle="bold"
                         android:padding="5dp"
                         android:background="#31018786">
@@ -107,6 +107,7 @@
                         android:layout_gravity="center_horizontal"
                         android:backgroundTint="@color/nevi_1"
                         android:fontFamily="@font/lora"
+                        android:textSize="14dp"
                         android:text="Description">
                     </Button>
                 </LinearLayout>
@@ -144,9 +145,9 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:fontFamily="@font/lora"
-                        android:text="Department Of Chemical Eng."
+                        android:text="Department Of Chemical Engg."
                         android:textColor="@color/nevi_1"
-                        android:textSize="16sp"
+                        android:textSize="14dp"
                         android:textStyle="bold"
                         android:padding="5dp"
                         android:background="#31018786">
@@ -159,6 +160,7 @@
                         android:layout_gravity="center_horizontal"
                         android:backgroundTint="@color/nevi_1"
                         android:fontFamily="@font/lora"
+                        android:textSize="14dp"
                         android:text="Description">
                     </Button>
                 </LinearLayout>
@@ -196,9 +198,9 @@
                         android:fontFamily="@font/lora"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
-                        android:text="Department Of Civil Eng."
+                        android:text="Department Of Civil Engg."
                         android:textColor="@color/nevi_1"
-                        android:textSize="16sp"
+                        android:textSize="14dp"
                         android:textStyle="bold"
                         android:padding="5dp"
                         android:background="#31018786">
@@ -210,6 +212,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:backgroundTint="@color/nevi_1"
+                        android:textSize="14dp"
                         android:fontFamily="@font/lora"
                         android:text="Description">
                     </Button>
@@ -248,9 +251,9 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:fontFamily="@font/lora"
-                        android:text="Department Of Computer Science and Eng."
+                        android:text="Department Of Computer Science and Engg."
                         android:textColor="@color/nevi_1"
-                        android:textSize="16sp"
+                        android:textSize="14dp"
                         android:textStyle="bold"
                         android:padding="5dp"
                         android:background="#31018786">
@@ -261,6 +264,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/lora"
+                        android:textSize="14dp"
                         android:layout_gravity="center_horizontal"
                         android:backgroundTint="@color/nevi_1"
                         android:text="Description">
@@ -300,9 +304,9 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:fontFamily="@font/lora"
-                        android:text="Department Of Mechanical Eng."
+                        android:text="Department Of Mechanical Engg."
                         android:textColor="@color/nevi_1"
-                        android:textSize="16sp"
+                        android:textSize="14dp"
                         android:textStyle="bold"
                         android:padding="5dp"
                         android:background="#31018786">
@@ -314,6 +318,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:fontFamily="@font/lora"
+                        android:textSize="14dp"
                         android:backgroundTint="@color/nevi_1"
                         android:text="Description">
                     </Button>
@@ -339,7 +344,7 @@
                     android:orientation="vertical">
                     <ImageView
                         android:layout_width="300dp"
-                        android:layout_height="150dp"
+                        android:layout_height="120dp"
                         android:layout_marginTop="20dp"
                         android:layout_marginLeft="20dp"
                         android:layout_marginRight="20dp"
@@ -351,9 +356,9 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/lora"
                         android:layout_gravity="center_horizontal"
-                        android:text="Department Of Electronics and telecommunication Eng."
+                        android:text="Department Of Electronics and telecommunication Engg."
                         android:textColor="@color/nevi_1"
-                        android:textSize="16sp"
+                        android:textSize="14dp"
                         android:textStyle="bold"
                         android:padding="5dp"
                         android:background="#31018786">
@@ -366,6 +371,7 @@
                         android:layout_gravity="center_horizontal"
                         android:backgroundTint="@color/nevi_1"
                         android:fontFamily="@font/lora"
+                        android:textSize="14dp"
                         android:text="Description">
                     </Button>
                 </LinearLayout>
@@ -405,7 +411,7 @@
                         android:fontFamily="@font/lora"
                         android:text="Department Of CSE (Data Science)"
                         android:textColor="@color/nevi_1"
-                        android:textSize="16sp"
+                        android:textSize="14dp"
                         android:textStyle="bold"
                         android:padding="5dp"
                         android:background="#31018786">
@@ -417,6 +423,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:backgroundTint="@color/nevi_1"
+                        android:textSize="14dp"
                         android:fontFamily="@font/lora"
                         android:text="Description">
                     </Button>
@@ -458,7 +465,7 @@
                         android:fontFamily="@font/lora"
                         android:text="Department Of CSE (Artificial Intelligence and Machine Learning)"
                         android:textColor="@color/nevi_1"
-                        android:textSize="16sp"
+                        android:textSize="14dp"
                         android:textStyle="bold"
                         android:padding="5dp"
                         android:background="#31018786">
@@ -470,6 +477,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:backgroundTint="@color/nevi_1"
+                        android:textSize="14dp"
                         android:fontFamily="@font/lora"
                         android:text="Description">
                     </Button>
