--- a/app/src/main/res/layout/activity_club.xml
+++ b/app/src/main/res/layout/activity_club.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@color/backcolor"
     tools:context=".ClubActivity">
 
     <LinearLayout
@@ -81,12 +81,11 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/HandF"
-            app:cardBackgroundColor="@color/nevi_1"
-            android:layout_marginTop="4dp"
+            app:cardBackgroundColor="@color/white"
+            android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:cardCornerRadius="5dp"
-            app:cardElevation="5dp"
             android:layout_marginStart="5dp"
             app:cardUseCompatPadding="true">
             <ImageView
@@ -97,21 +96,22 @@
                 app:srcCompat="@drawable/dypcetlogo">
             </ImageView>
             <TextView
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
                 android:fontFamily="@font/lora"
                 android:text="Health and Fitness Club"
                 android:gravity="center"
+                android:layout_gravity="center_horizontal"
                 android:layout_margin="5dp"
-                android:textSize="16sp"
-                android:textColor="@color/white"
+                android:textSize="16dp"
+                android:textColor="@color/nevi_1"
                 android:textStyle="bold">
             </TextView>
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
             android:id="@+id/HighEdu"
-            app:cardBackgroundColor="@color/nevi_1"
+            app:cardBackgroundColor="@color/white"
             android:layout_marginTop="4dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -127,21 +127,22 @@
                 app:srcCompat="@drawable/dypcetlogo">
             </ImageView>
             <TextView
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
                 android:fontFamily="@font/lora"
                 android:text="Higher Education Club"
                 android:gravity="center"
+                android:layout_gravity="center_horizontal"
                 android:layout_margin="5dp"
-                android:textSize="16sp"
-                android:textColor="@color/white"
+                android:textSize="16dp"
+                android:textColor="@color/nevi_1"
                 android:textStyle="bold">
             </TextView>
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
             android:id="@+id/Photography"
-            app:cardBackgroundColor="@color/nevi_1"
+            app:cardBackgroundColor="@color/white"
             android:layout_marginTop="4dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -157,21 +158,22 @@
                 app:srcCompat="@drawable/dypcetlogo">
             </ImageView>
             <TextView
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
                 android:fontFamily="@font/lora"
                 android:text="Photography Club"
                 android:gravity="center"
+                android:layout_gravity="center_horizontal"
                 android:layout_margin="5dp"
-                android:textSize="16sp"
-                android:textColor="@color/white"
+                android:textSize="16dp"
+                android:textColor="@color/nevi_1"
                 android:textStyle="bold">
             </TextView>
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
             android:id="@+id/coding"
-            app:cardBackgroundColor="@color/nevi_1"
+            app:cardBackgroundColor="@color/white"
             android:layout_marginTop="4dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -187,24 +189,25 @@
                 app:srcCompat="@drawable/dypcetlogo">
             </ImageView>
             <TextView
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
                 android:layout_marginStart="20dp"
                 android:fontFamily="@font/lora"
                 android:text="Coding and Programming Club"
                 android:gravity="center"
+                android:layout_gravity="center_horizontal"
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
                 android:layout_marginEnd="5dp"
-                android:textSize="16sp"
-                android:textColor="@color/white"
+                android:textSize="16dp"
+                android:textColor="@color/nevi_1"
                 android:textStyle="bold">
             </TextView>
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
             android:id="@+id/Adventure"
-            app:cardBackgroundColor="@color/nevi_1"
+            app:cardBackgroundColor="@color/white"
             android:layout_marginTop="4dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -220,21 +223,22 @@
                 app:srcCompat="@drawable/dypcetlogo">
             </ImageView>
             <TextView
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
                 android:fontFamily="@font/lora"
                 android:text="Adventure Club"
+                android:layout_gravity="center_horizontal"
                 android:gravity="center"
                 android:layout_margin="5dp"
-                android:textSize="16sp"
-                android:textColor="@color/white"
+                android:textSize="16dp"
+                android:textColor="@color/nevi_1"
                 android:textStyle="bold">
             </TextView>
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
             android:id="@+id/Robotics"
-            app:cardBackgroundColor="@color/nevi_1"
+            app:cardBackgroundColor="@color/white"
             android:layout_marginTop="4dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -250,14 +254,15 @@
                 app:srcCompat="@drawable/dypcetlogo">
             </ImageView>
             <TextView
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
                 android:fontFamily="@font/lora"
                 android:text="Robotics Club"
                 android:gravity="center"
+                android:layout_gravity="center_horizontal"
                 android:layout_margin="5dp"
-                android:textSize="16sp"
-                android:textColor="@color/white"
+                android:textSize="16dp"
+                android:textColor="@color/nevi_1"
                 android:textStyle="bold">
             </TextView>
         </androidx.cardview.widget.CardView>
