--- a/app/src/main/res/layout/activity_coding.xml
+++ b/app/src/main/res/layout/activity_coding.xml
@@ -84,7 +84,7 @@
                     android:text="Coding and Programming"
                     android:gravity="center"
                     android:layout_margin="5dp"
-                    android:textSize="16sp"
+                    android:textSize="16dp"
                     android:textColor="@color/black"
                     android:textStyle="bold">
                 </TextView>
@@ -95,6 +95,7 @@
                 android:background="@color/backcolor"
                 android:textColor="@color/nevi_1"
                 android:fontFamily="@font/lora"
+                android:textSize="14dp"
                 android:text="Engineering student without coding skills is like a warrior without a sword so our D Y Patil College of Engineering and Technology, Kolhapur has introduced the idea of “Coding and Programming Club”. Within this environment senior student will guide every member from club about the skills which he had gained during his four years of academic and has developed his logic."
                 >
             </TextView>
@@ -120,7 +121,7 @@
                     android:text="Objectives"
                     android:gravity="center"
                     android:layout_margin="5dp"
-                    android:textSize="16sp"
+                    android:textSize="16dp"
                     android:textColor="@color/black"
                     android:textStyle="bold">
                 </TextView>
@@ -131,6 +132,7 @@
                 android:background="@color/backcolor"
                 android:textColor="@color/nevi_1"
                 android:fontFamily="@font/lora"
+                android:textSize="14dp"
                 android:text="> To increase coding literacy."
                 >
             </TextView>
@@ -141,6 +143,7 @@
                 android:background="@color/backcolor"
                 android:textColor="@color/nevi_1"
                 android:fontFamily="@font/lora"
+                android:textSize="14dp"
                 android:text="> To create Logical thinking among engineering students."
                 >
             </TextView>
@@ -151,6 +154,7 @@
                 android:background="@color/backcolor"
                 android:textColor="@color/nevi_1"
                 android:fontFamily="@font/lora"
+                android:textSize="14dp"
                 android:text="> To develop the skill employment for the campus placement."
                 >
             </TextView>
@@ -161,6 +165,7 @@
                 android:background="@color/backcolor"
                 android:textColor="@color/nevi_1"
                 android:fontFamily="@font/lora"
+                android:textSize="14dp"
                 android:text="> To remove code phobia."
                 >
             </TextView>
@@ -171,6 +176,7 @@
                 android:background="@color/backcolor"
                 android:textColor="@color/nevi_1"
                 android:fontFamily="@font/lora"
+                android:textSize="14dp"
                 android:text="> To create  incubation environment for skilled Developer."
                 >
             </TextView>
@@ -236,7 +242,7 @@
                         android:fontFamily="@font/lora"
                         android:text="The Session on the Introduction to C programming has been conducted by the club students for FE students."
                         android:textColor="@color/nevi_1"
-                        android:textSize="16sp"
+                        android:textSize="14dp"
                         android:textStyle="bold"
                         android:padding="5dp"
                         android:background="#31018786">
@@ -278,7 +284,7 @@
                         android:fontFamily="@font/lora"
                         android:text="Practical session was organized for SE students on “Data Structure implementation”"
                         android:textColor="@color/nevi_1"
-                        android:textSize="16sp"
+                        android:textSize="14dp"
                         android:textStyle="bold"
                         android:padding="5dp"
                         android:background="#31018786">
@@ -320,7 +326,7 @@
                         android:fontFamily="@font/lora"
                         android:text="A seminar on “Optimization technique used in programming” given by Mr. Nadeem Sayyad (Research associate, Jonh Deer, Pune)"
                         android:textColor="@color/nevi_1"
-                        android:textSize="16sp"
+                        android:textSize="14dp"
                         android:textStyle="bold"
                         android:padding="5dp"
                         android:background="#31018786">
