--- a/app/src/main/res/layout/activity_find_document.xml
+++ b/app/src/main/res/layout/activity_find_document.xml
@@ -21,18 +21,19 @@
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:layout_margin="5dp"
-            app:srcCompat="@drawable/back"></ImageView>
+            app:srcCompat="@drawable/back">
+        </ImageView>
 
         <TextView
             android:layout_width="185dp"
-            android:layout_height="35dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="40dp"
             android:layout_marginTop="5dp"
             android:fontFamily="@font/lora"
             android:gravity="center"
             android:text="Find Your Document"
             android:textColor="@color/white"
-            android:textSize="20dp">
+            android:textSize="18dp">
         </TextView>
 
         <ImageView
@@ -77,7 +78,7 @@
                     android:text="Document"
                     android:fontFamily="@font/lora"
                     android:textColor="@color/white"
-                    android:textSize="18sp"
+                    android:textSize="16dp"
                     android:textStyle="bold">
                 </TextView>
 
@@ -89,7 +90,7 @@
                     android:layout_weight="1"
                     android:gravity="center_horizontal"
                     android:textColor="@color/white"
-                    android:textSize="18sp"
+                    android:textSize="16dp"
                     android:textStyle="bold">
                 </TextView>
             </TableRow>
@@ -103,7 +104,7 @@
                     android:text="Caste Certificate"
                     android:fontFamily="@font/lora"
                     android:textColor="@color/black"
-                    android:textSize="16sp">
+                    android:textSize="14dp">
                 </TextView>
                 <TextView
                     android:layout_width="wrap_content"
@@ -112,7 +113,7 @@
                     android:text="Tahsildar Office"
                     android:fontFamily="@font/lora"
                     android:textColor="@color/black"
-                    android:textSize="16sp"
+                    android:textSize="14dp"
                     android:layout_weight="1">
                 </TextView>
             </TableRow>
@@ -127,7 +128,8 @@
                     android:textColor="@color/black"
                     android:fontFamily="@font/lora"
                     android:layout_marginRight="5dp"
-                    android:textSize="16sp"></TextView>
+                    android:textSize="14dp">
+                </TextView>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -135,7 +137,7 @@
                     android:text="Tahsildar Office"
                     android:fontFamily="@font/lora"
                     android:textColor="@color/black"
-                    android:textSize="16sp"
+                    android:textSize="14dp"
                     android:layout_weight="1">
                 </TextView>
             </TableRow>
@@ -148,7 +150,7 @@
                     android:fontFamily="@font/lora"
                     android:text="Caste Validity Certificate"
                     android:textColor="@color/black"
-                    android:textSize="16sp"
+                    android:textSize="14dp"
                     >
                 </TextView>
                 <TextView
@@ -158,7 +160,7 @@
                     android:text="Department of welfare for backward classes."
                     android:padding="1dp"
                     android:textColor="@color/black"
-                    android:textSize="16sp"
+                    android:textSize="14dp"
                     android:layout_weight="1">
                 </TextView>
             </TableRow>
@@ -172,17 +174,17 @@
                     android:layout_height="wrap_content"
                     android:text="Domicile Certificate"
                     android:textColor="@color/black"
-                    android:textSize="16sp"
+                    android:textSize="14dp"
                     ></TextView>
                 <TextView
                     android:layout_gravity="center_vertical"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/lora"
-                    android:text="Tahsildar Office/District Collector's Office"
+                    android:text="Tahsildar Office"
                     android:textColor="@color/black"
                     android:padding="1dp"
-                    android:textSize="16sp"
+                    android:textSize="14dp"
                     android:layout_weight="1">
                 </TextView>
             </TableRow>
@@ -195,7 +197,7 @@
                     android:fontFamily="@font/lora"
                     android:text="Non-Creme Layer Certificate"
                     android:textColor="@color/black"
-                    android:textSize="16sp"
+                    android:textSize="14dp"
                     >
                 </TextView>
                 <TextView
@@ -206,7 +208,7 @@
                     android:text="Revenue Department/Backward Classes Welfare Department"
                     android:textColor="@color/black"
                     android:padding="1dp"
-                    android:textSize="16sp"
+                    android:textSize="14dp"
                     android:layout_weight="1">
                 </TextView>
             </TableRow>
@@ -220,7 +222,7 @@
                     android:text="EWS Certificate"
                     android:fontFamily="@font/lora"
                     android:textColor="@color/black"
-                    android:textSize="16sp"
+                    android:textSize="14dp"
                     ></TextView>
                 <TextView
                     android:layout_gravity="center_vertical"
@@ -229,14 +231,11 @@
                     android:text="Tahsildar Office"
                     android:fontFamily="@font/lora"
                     android:textColor="@color/black"
-                    android:textSize="16sp"
+                    android:textSize="14dp"
                     android:layout_weight="1">
                 </TextView>
             </TableRow>
-
         </TableLayout>
-
     </LinearLayout>
     </androidx.core.widget.NestedScrollView>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
