--- a/app/src/main/res/layout/activity_future_eng.xml
+++ b/app/src/main/res/layout/activity_future_eng.xml
@@ -27,7 +27,7 @@
             android:layout_width="160dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="50dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
             android:gravity="center"
             android:text="Future Engineering"
             android:fontFamily="@font/lora"
