--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -44,7 +44,7 @@
                 android:fontFamily="@font/lora"
                 android:textAlignment="center"
                 android:textColor="@color/blue"
-                android:textSize="25sp"
+                android:textSize="22dp"
                 android:textStyle="bold" />
 
             <EditText
@@ -55,6 +55,7 @@
                 android:drawableLeft="@drawable/baseline_person_24"
                 android:drawablePadding="8dp"
                 android:hint="Email"
+                android:textSize="14dp"
                 android:fontFamily="@font/lora"
                 android:padding="8dp"
                 android:textColor="@color/black"
@@ -72,6 +73,7 @@
                 android:fontFamily="@font/lora"
                 android:inputType="textPassword"
                 android:padding="8dp"
+                android:textSize="14dp"
                 android:textColor="@color/black"
                 android:textColorHighlight="@color/cardview_dark_background"
                 android:textColorHint="@color/hint" />
@@ -85,7 +87,7 @@
                 android:text="Login"
                 android:textColor="@color/white"
                 android:fontFamily="@font/lora"
-                android:textSize="18sp"
+                android:textSize="18dp"
                 android:textStyle="bold"
                 app:cornerRadius="20dp" />
 
@@ -100,7 +102,7 @@
         android:padding="8dp"
         android:text="Not yet registered? SignUp Now"
         android:fontFamily="@font/lora"
-        android:textSize="14sp"
+        android:textSize="14dp"
         android:layout_marginTop="20dp"
         android:layout_gravity="center_horizontal"
         android:textAlignment="center"
