--- a/app/src/main/res/layout/activity_mechanical.xml
+++ b/app/src/main/res/layout/activity_mechanical.xml
@@ -66,12 +66,13 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp"
                 android:layout_width="match_parent"
-                android:layout_height="30dp"
+                android:layout_height="wrap_content"
+                android:padding="2dp"
                 android:textColor="@color/white"
                 android:background="#F2150E65"
-                android:text="Department of Mechanical Eng."
+                android:text="Department of Mechanical Engg."
                 android:fontFamily="@font/lora"
-                android:textSize="20sp"
+                android:textSize="18dp"
                 android:gravity="center"
                 android:layout_marginBottom="7dp">
             </TextView>
@@ -82,7 +83,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#0F018786"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 android:textColor="@color/black"
                 android:padding="5dp"
                 android:fontFamily="@font/lora"
@@ -95,7 +96,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#0F018786"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 android:textColor="@color/black"
                 android:padding="5dp"
                 android:fontFamily="@font/lora"
@@ -115,12 +116,13 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp"
                 android:layout_width="match_parent"
-                android:layout_height="30dp"
+                android:layout_height="wrap_content"
+                android:padding="2dp"
                 android:textColor="@color/white"
                 android:background="#F2150E65"
                 android:fontFamily="@font/lora"
                 android:text="Mechanical  Engineering – Scope"
-                android:textSize="20sp"
+                android:textSize="18dp"
                 android:gravity="center"
                 android:layout_marginBottom="7dp">
             </TextView>
@@ -131,7 +133,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#0F018786"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 android:textColor="@color/black"
                 android:padding="5dp"
                 android:fontFamily="@font/lora"
@@ -145,7 +147,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#0F018786"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 android:textColor="@color/black"
                 android:padding="5dp"
                 android:fontFamily="@font/lora"
@@ -158,7 +160,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#0F018786"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 android:textColor="@color/black"
                 android:padding="5dp"
                 android:fontFamily="@font/lora"
@@ -172,7 +174,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#0F018786"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 android:textColor="@color/black"
                 android:padding="5dp"
                 android:fontFamily="@font/lora"
@@ -186,7 +188,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#0F018786"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 android:textColor="@color/black"
                 android:padding="5dp"
                 android:fontFamily="@font/lora"
@@ -200,7 +202,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#0F018786"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 android:textColor="@color/black"
                 android:padding="5dp"
                 android:fontFamily="@font/lora"
@@ -214,7 +216,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#0F018786"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 android:textColor="@color/black"
                 android:padding="5dp"
                 android:fontFamily="@font/lora"
@@ -228,7 +230,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#0F018786"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 android:textColor="@color/black"
                 android:padding="5dp"
                 android:fontFamily="@font/lora"
@@ -242,7 +244,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#0F018786"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 android:textColor="@color/black"
                 android:padding="5dp"
                 android:fontFamily="@font/lora"
@@ -256,7 +258,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#0F018786"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 android:textColor="@color/black"
                 android:padding="5dp"
                 android:fontFamily="@font/lora"
@@ -270,12 +272,13 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginEnd="10dp"
                 android:layout_width="match_parent"
-                android:layout_height="30dp"
+                android:layout_height="wrap_content"
+                android:padding="2dp"
                 android:textColor="@color/white"
                 android:background="#F2150E65"
                 android:fontFamily="@font/lora"
                 android:text="Mechanical Engineering Streams"
-                android:textSize="20sp"
+                android:textSize="18dp"
                 android:gravity="center"
                 android:layout_marginBottom="7dp">
             </TextView>
@@ -287,7 +290,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/lora"
                 android:background="#0F018786"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 android:textColor="@color/black"
                 android:padding="5dp"
                 android:text="> Production"
@@ -300,7 +303,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#0F018786"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 android:fontFamily="@font/lora"
                 android:textColor="@color/black"
                 android:padding="5dp"
@@ -313,7 +316,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#0F018786"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 android:textColor="@color/black"
                 android:fontFamily="@font/lora"
                 android:padding="5dp"
@@ -327,7 +330,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#0F018786"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 android:textColor="@color/black"
                 android:fontFamily="@font/lora"
                 android:padding="5dp"
@@ -341,7 +344,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#0F018786"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 android:fontFamily="@font/lora"
                 android:textColor="@color/black"
                 android:padding="5dp"
@@ -355,7 +358,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#0F018786"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 android:textColor="@color/black"
                 android:fontFamily="@font/lora"
                 android:padding="5dp"
@@ -369,7 +372,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#0F018786"
-                android:textSize="14sp"
+                android:textSize="14dp"
                 android:textColor="@color/black"
                 android:fontFamily="@font/lora"
                 android:layout_marginBottom="10dp"
