--- a/app/src/main/res/layout/activity_sangli.xml
+++ b/app/src/main/res/layout/activity_sangli.xml
@@ -71,7 +71,7 @@
                 android:text="Sangli"
                 android:fontFamily="@font/lora"
                 android:textColor="@color/blue"
-                android:textSize="22dp"
+                android:textSize="20dp"
                 android:textStyle="bold" />
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -86,7 +86,7 @@
                     android:text="MorningTime = 7:30AM"
                     android:fontFamily="@font/lora"
                     android:textColor="@color/blue"
-                    android:textSize="14sp" />
+                    android:textSize="14dp" />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -94,7 +94,7 @@
                     android:text="EveningTime = 5:30PM"
                     android:fontFamily="@font/lora"
                     android:textColor="@color/blue"
-                    android:textSize="14sp" />
+                    android:textSize="14dp" />
             </LinearLayout>
 
             <ImageView
@@ -110,7 +110,7 @@
                 android:text="Udgaon"
                 android:fontFamily="@font/lora"
                 android:textColor="@color/blue"
-                android:textSize="22dp"
+                android:textSize="20dp"
                 android:textStyle="bold" />
 
             <LinearLayout
@@ -126,7 +126,7 @@
                     android:text="MorningTime = 7:40AM"
                     android:fontFamily="@font/lora"
                     android:textColor="@color/blue"
-                    android:textSize="14sp" />
+                    android:textSize="14dp" />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -134,7 +134,7 @@
                     android:text="EveningTime = 5:30PM"
                     android:fontFamily="@font/lora"
                     android:textColor="@color/blue"
-                    android:textSize="14sp" />
+                    android:textSize="14dp" />
             </LinearLayout>
 
             <ImageView
@@ -165,7 +165,7 @@
                     android:text="MorningTime = 7:50AM"
                     android:fontFamily="@font/lora"
                     android:textColor="@color/blue"
-                    android:textSize="14sp" />
+                    android:textSize="14dp" />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -173,7 +173,7 @@
                     android:text="EveningTime = 5:15PM"
                     android:fontFamily="@font/lora"
                     android:textColor="@color/blue"
-                    android:textSize="14sp" />
+                    android:textSize="14dp" />
             </LinearLayout>
 
             <ImageView
@@ -204,7 +204,7 @@
                     android:text="MorningTime = 7:55AM"
                     android:fontFamily="@font/lora"
                     android:textColor="@color/blue"
-                    android:textSize="14sp" />
+                    android:textSize="14dp" />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -212,7 +212,7 @@
                     android:text="EveningTime = 5:10PM"
                     android:fontFamily="@font/lora"
                     android:textColor="@color/blue"
-                    android:textSize="14sp" />
+                    android:textSize="14dp" />
             </LinearLayout>
 
             <ImageView
@@ -244,7 +244,7 @@
                     android:text="MorningTime = 8:00AM"
                     android:fontFamily="@font/lora"
                     android:textColor="@color/blue"
-                    android:textSize="14sp" />
+                    android:textSize="14dp" />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -252,7 +252,7 @@
                     android:text="EveningTime = 5:00PM"
                     android:fontFamily="@font/lora"
                     android:textColor="@color/blue"
-                    android:textSize="14sp" />
+                    android:textSize="14dp" />
             </LinearLayout>
 
             <ImageView
@@ -284,7 +284,7 @@
                     android:text="MorningTime = 8:10AM"
                     android:fontFamily="@font/lora"
                     android:textColor="@color/blue"
-                    android:textSize="14sp" />
+                    android:textSize="14dp" />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -292,7 +292,7 @@
                     android:text="EveningTime = 4:50PM"
                     android:fontFamily="@font/lora"
                     android:textColor="@color/blue"
-                    android:textSize="14sp" />
+                    android:textSize="14dp" />
             </LinearLayout>
 
             <ImageView
@@ -323,7 +323,7 @@
                     android:text="MorningTime = 8:10AM"
                     android:fontFamily="@font/lora"
                     android:textColor="@color/blue"
-                    android:textSize="14sp" />
+                    android:textSize="14dp" />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -331,7 +331,7 @@
                     android:text="EveningTime = 4:50PM"
                     android:fontFamily="@font/lora"
                     android:textColor="@color/blue"
-                    android:textSize="14sp" />
+                    android:textSize="14dp" />
             </LinearLayout>
 
             <ImageView
@@ -363,7 +363,7 @@
                     android:text="MorningTime = 8:20AM"
                     android:fontFamily="@font/lora"
                     android:textColor="@color/blue"
-                    android:textSize="14sp" />
+                    android:textSize="14dp" />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -371,7 +371,7 @@
                     android:text="EveningTime = 5:30PM"
                     android:fontFamily="@font/lora"
                     android:textColor="@color/blue"
-                    android:textSize="14sp" />
+                    android:textSize="14dp" />
             </LinearLayout>
 
             <ImageView
@@ -403,7 +403,7 @@
                     android:text="MorningTime = 8:25AM"
                     android:fontFamily="@font/lora"
                     android:textColor="@color/blue"
-                    android:textSize="14sp" />
+                    android:textSize="14dp" />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -411,7 +411,7 @@
                     android:text="EveningTime = 4:35PM"
                     android:fontFamily="@font/lora"
                     android:textColor="@color/blue"
-                    android:textSize="14sp" />
+                    android:textSize="14dp" />
             </LinearLayout>
 
             <ImageView
@@ -443,7 +443,7 @@
                     android:text="MorningTime = 8:50AM"
                     android:fontFamily="@font/lora"
                     android:textColor="@color/blue"
-                    android:textSize="14sp" />
+                    android:textSize="14dp" />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -451,7 +451,7 @@
                     android:text="EveningTime = 4:15PM"
                     android:fontFamily="@font/lora"
                     android:textColor="@color/blue"
-                    android:textSize="14sp" />
+                    android:textSize="14dp" />
             </LinearLayout>
 
             <ImageView
