--- a/app/src/main/res/layout/activity_why_dypcet.xml
+++ b/app/src/main/res/layout/activity_why_dypcet.xml
@@ -63,12 +63,11 @@
         app:layout_constraintTop_toBottomOf="@+id/linearLayout3">
         <androidx.cardview.widget.CardView
             android:id="@+id/virtual_tour"
-            app:cardBackgroundColor="@color/nevi_1"
+            app:cardBackgroundColor="@color/branch"
             android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:cardCornerRadius="5dp"
-            app:cardElevation="5dp"
+            app:cardCornerRadius="30dp"
             android:layout_marginEnd="15dp"
             android:layout_marginStart="15dp"
             app:cardUseCompatPadding="true">
@@ -85,9 +84,9 @@
                 android:fontFamily="@font/lora"
                 android:text="Click here to watch Virtual Tour Of DYPCET"
                 android:gravity="center"
-                android:layout_gravity="center_horizontal"
+                android:layout_gravity="end"
                 android:layout_margin="5dp"
-                android:textSize="20sp"
+                android:textSize="19dp"
                 android:textColor="@color/white"
                 android:textStyle="bold">
             </TextView>
@@ -95,7 +94,7 @@
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="3dp"
+            android:layout_height="2dp"
             android:background="#F2A0A0A2"
             android:layout_margin="10dp">
         </View>
@@ -105,8 +104,7 @@
             app:cardBackgroundColor="@color/white"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:cardCornerRadius="5dp"
-            app:cardElevation="5dp"
+            app:cardCornerRadius="15dp"
             android:layout_marginEnd="15dp"
             android:layout_marginStart="15dp"
             app:cardUseCompatPadding="true">
@@ -125,7 +123,7 @@
                 android:gravity="center"
                 android:layout_gravity="center_horizontal"
                 android:layout_margin="5dp"
-                android:textSize="20sp"
+                android:textSize="18dp"
                 android:textColor="@color/nevi_1">
             </TextView>
         </androidx.cardview.widget.CardView>
@@ -135,8 +133,7 @@
             app:cardBackgroundColor="@color/white"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:cardCornerRadius="5dp"
-            app:cardElevation="5dp"
+            app:cardCornerRadius="15dp"
             android:layout_marginEnd="15dp"
             android:layout_marginStart="15dp"
             app:cardUseCompatPadding="true">
@@ -155,7 +152,7 @@
                 android:gravity="center"
                 android:layout_gravity="center_horizontal"
                 android:layout_margin="5dp"
-                android:textSize="20sp"
+                android:textSize="18dp"
                 android:textColor="@color/nevi_1">
             </TextView>
         </androidx.cardview.widget.CardView>
@@ -165,8 +162,7 @@
             app:cardBackgroundColor="@color/white"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:cardCornerRadius="5dp"
-            app:cardElevation="5dp"
+            app:cardCornerRadius="15dp"
             android:layout_marginEnd="15dp"
             android:layout_marginStart="15dp"
             app:cardUseCompatPadding="true">
@@ -185,7 +181,7 @@
                 android:gravity="center"
                 android:layout_gravity="center_horizontal"
                 android:layout_margin="5dp"
-                android:textSize="20sp"
+                android:textSize="18dp"
                 android:textColor="@color/nevi_1">
             </TextView>
         </androidx.cardview.widget.CardView>
@@ -195,8 +191,7 @@
             app:cardBackgroundColor="@color/white"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:cardCornerRadius="5dp"
-            app:cardElevation="5dp"
+            app:cardCornerRadius="15dp"
             android:layout_marginEnd="15dp"
             android:layout_marginStart="15dp"
             app:cardUseCompatPadding="true">
@@ -215,7 +210,7 @@
                 android:fontFamily="@font/lora"
                 android:layout_gravity="center_horizontal"
                 android:layout_margin="5dp"
-                android:textSize="20sp"
+                android:textSize="18dp"
                 android:textColor="@color/nevi_1">
             </TextView>
 
@@ -226,8 +221,7 @@
             app:cardBackgroundColor="@color/white"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:cardCornerRadius="5dp"
-            app:cardElevation="5dp"
+            app:cardCornerRadius="15dp"
             android:layout_marginEnd="15dp"
             android:layout_marginStart="15dp"
             app:cardUseCompatPadding="true">
@@ -246,7 +240,7 @@
                 android:gravity="center"
                 android:layout_gravity="center_horizontal"
                 android:layout_margin="5dp"
-                android:textSize="20sp"
+                android:textSize="18dp"
                 android:textColor="@color/nevi_1">
             </TextView>
         </androidx.cardview.widget.CardView>
@@ -256,8 +250,7 @@
             app:cardBackgroundColor="@color/white"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:cardCornerRadius="5dp"
-            app:cardElevation="5dp"
+            app:cardCornerRadius="15dp"
             android:layout_marginEnd="15dp"
             android:layout_marginStart="15dp"
             app:cardUseCompatPadding="true">
@@ -275,7 +268,7 @@
                 android:gravity="center"
                 android:layout_gravity="center_horizontal"
                 android:layout_margin="5dp"
-                android:textSize="20sp"
+                android:textSize="18dp"
                 android:textColor="@color/nevi_1"
                 android:fontFamily="@font/lora">
             </TextView>
@@ -286,8 +279,7 @@
             app:cardBackgroundColor="@color/white"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:cardCornerRadius="5dp"
-            app:cardElevation="5dp"
+            app:cardCornerRadius="15dp"
             android:layout_marginEnd="15dp"
             android:layout_marginStart="15dp"
             app:cardUseCompatPadding="true">
@@ -305,7 +297,7 @@
                 android:gravity="center"
                 android:layout_gravity="center_horizontal"
                 android:layout_margin="5dp"
-                android:textSize="20sp"
+                android:textSize="18dp"
                 android:fontFamily="@font/lora"
                 android:textColor="@color/nevi_1">
             </TextView>
@@ -316,8 +308,7 @@
             app:cardBackgroundColor="@color/white"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:cardCornerRadius="5dp"
-            app:cardElevation="5dp"
+            app:cardCornerRadius="15dp"
             android:layout_marginEnd="15dp"
             android:layout_marginStart="15dp"
             app:cardUseCompatPadding="true">
@@ -336,11 +327,10 @@
                 android:gravity="center"
                 android:layout_gravity="center_horizontal"
                 android:layout_margin="5dp"
-                android:textSize="20sp"
+                android:textSize="18dp"
                 android:textColor="@color/nevi_1">
             </TextView>
         </androidx.cardview.widget.CardView>
-
     </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
